tests/baselines/reference/augmentedTypesModules2.errors.txt
augmentedTypesModules2.ts(2,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
augmentedTypesModules2.ts(5,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
augmentedTypesModules2.ts(5,8): error TS2434: A namespace declaration cannot be located prior to a class or function with which it is merged.
augmentedTypesModules2.ts(8,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
augmentedTypesModules2.ts(8,8): error TS2434: A namespace declaration cannot be located prior to a class or function with which it is merged.
augmentedTypesModules2.ts(12,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
augmentedTypesModules2.ts(14,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
augmentedTypesModules2.ts(14,8): error TS2434: A namespace declaration cannot be located prior to a class or function with which it is merged.
augmentedTypesModules2.ts(17,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
augmentedTypesModules2.ts(21,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
augmentedTypesModules2.ts(24,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
augmentedTypesModules2.ts(27,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== augmentedTypesModules2.ts (12 errors) ====
    // module then function
    module m2 { }
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    function m2() { }; // ok since the module is not instantiated
    
    module m2a { var y = 2; }
           ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
           ~~~
!!! error TS2434: A namespace declaration cannot be located prior to a class or function with which it is merged.
    function m2a() { }; // error since the module is instantiated
    
    module m2b { export var y = 2; }
           ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
           ~~~
!!! error TS2434: A namespace declaration cannot be located prior to a class or function with which it is merged.
    function m2b() { };  // error since the module is instantiated
    
    function m2c() { }; 
    module m2c { export var y = 2; } 
           ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    
    module m2cc { export var y = 2; }
           ~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
           ~~~~
!!! error TS2434: A namespace declaration cannot be located prior to a class or function with which it is merged.
    function m2cc() { }; // error to have module first
    
    module m2d { }
           ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    declare function m2d(): void; 
    
    declare function m2e(): void; 
    module m2e { }
           ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    
    function m2f() { };
    module m2f { export interface I { foo(): void } } 
           ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    
    function m2g() { };
    module m2g { export class C { foo() { } } } 
           ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    